gateways/dex-gateway.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`id.tosuke.me`)
    kind: Rule
    services:
    - kind: TraefikService
      namespace: oidc
      name: dex
  tls:
    secretName: cloudflare-origin-cert-wildcard-tosuke-me
    domains:
    - main: id.tosuke.me
    options:
      name: cloudflare-origin
