gateways/edgerouter-dashboard-gateway.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: edgerouter-dashboard
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`erlite.tosuke.me`)
    kind: Rule
    services:
    - kind: TraefikService
      namespace: kube-system
      name: edgerouter-dashboard
  tls:
    secretName: cloudflare-origin-cert-wildcard-tosuke-me
    options:
      name: cloudflare-origin
