gateways/hubble-ui-gateway.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`hubble.k8s.tosuke.me`)
    kind: Rule
    middlewares:
    - name: hubble-ui-oauth
      namespace: oidc
    services:
    - kind: TraefikService
      namespace: kube-system
      name: hubble-ui
  - match: Host(`hubble.k8s.tosuke.me`) && PathPrefix(`/oauth2/`)
    kind: Rule
    services:
    - kind: TraefikService
      namespace: oidc
      name: hubble-ui-oauth2-proxy
  tls:
    secretName: cert-wildcard-k8s-tosuke-me
