gateways/kube-apiserver.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: external-kube-apiserver
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`k8s.tosuke.me`)
    kind: Rule
    services:
    - kind: TraefikService
      namespace: default
      name: external-kube-apiserver
  tls:
    secretName: cloudflare-origin-cert-wildcard-tosuke-me
    domains:
    - main: k8s.tosuke.me
    options:
      name: cloudflare-origin
