gateways/kubernetes-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`dash.k8s.tosuke.me`)
    kind: Rule
    services:
    - kind: TraefikService
      namespace: kube-system
      name: kubernetes-dashboard
  tls:
    secretName: cert-wildcard-k8s-tosuke-me
